force-app/main/default/objects/PedidoDeCompra__c/fields/Plazo_cobro_real__c.field-meta.xml
<CustomField>
    <fullName>Plazo_cobro_real__c</fullName>
    <formula>FechaDeCobro__c - ETD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual order collection time in days (Collection Date - ETD)</inlineHelpText>
    <label>Plazo cobro real</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>