force-app/main/default/objects/PedidoDeCompra__c/fields/Plazo_pago_real__c.field-meta.xml
<CustomField>
    <fullName>Plazo_pago_real__c</fullName>
    <formula>FechaDePago__c - ETD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Actual payment deadline for the order (Payment Date - ETD)</inlineHelpText>
    <label>Plazo pago real</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>