force-app/main/default/objects/PedidoDeCompra__c/fields/PlazoFabricacion__c.field-meta.xml
<CustomField>
    <fullName>PlazoFabricacion__c</fullName>
    <description>Al crear el Pedido, el sistema copia el valor de la Fabrica.</description>
    <inlineHelpText>When creating the order, the system copies the factory value.</inlineHelpText>
    <label>Plazo de Fabricación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>