force-app/main/default/objects/PedidoDeCompra__c/fields/PlazoPago__c.field-meta.xml
<CustomField>
    <fullName>PlazoPago__c</fullName>
    <description>Al crear el pedido, el sistema copia el valor de la cuenta del cliente.</description>
    <inlineHelpText>When creating the order, the system copies the value from the customer account.</inlineHelpText>
    <label>Plazo cobro cliente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>