force-app/main/default/objects/PedidoDeCompra__c/fields/PlazoPagoFab__c.field-meta.xml
<CustomField>
    <fullName>PlazoPagoFab__c</fullName>
    <label>Plazo Pago (fabrica)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>