force-app/main/default/objects/PedidoDeCompra__c/fields/PlazoPagoProveedor__c.field-meta.xml
<CustomField>
    <fullName>PlazoPagoProveedor__c</fullName>
    <formula>VALUE ( TEXT ( Proveedor__r.PlazoPago__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plazo pago proveedor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>