force-app/main/default/objects/PedidoDeCompra__c/fields/PorcentajeDepositoAFabrica__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeDepositoAFabrica__c</fullName>
    <description>Al crear el pedido, el sistema copia el valor de la cuenta del proveedor</description>
    <inlineHelpText>When creating the order, the system copies the value from the supplier account.</inlineHelpText>
    <label>% de Deposito a Fábrica</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>