force-app/main/default/objects/PedidoDeCompra__c/fields/Portal_Token__c.field-meta.xml
<CustomField>
    <fullName>Portal_Token__c</fullName>
    <description>Token para acceder al portal de proveedores</description>
    <label>Portal_Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>