force-app/main/default/objects/PedidoDeCompra__c/fields/Precio_Total__c.field-meta.xml
<CustomField>
    <fullName>Precio_Total__c</fullName>
    <label>Importe Venta Bruto</label>
    <summarizedField>PedidoLineItem__c.PrecioDeVentaTot__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>