force-app/main/default/objects/PedidoDeCompra__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <description>Detalle a modo de identificar de que va el pedido</description>
    <inlineHelpText>Detail to identify the purpose of the order (References the related Opportunity name in the new Product field)</inlineHelpText>
    <label>Producto (depr.)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>