force-app/main/default/objects/PedidoDeCompra__c/fields/Proforma__c.field-meta.xml
<CustomField>
    <fullName>Proforma__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proforma</label>
    <referenceTo>Proforma__c</referenceTo>
    <relationshipName>PedidosDeCompra</relationshipName>
    <type>Lookup</type>
</CustomField>