force-app/main/default/objects/PedidoDeCompra__c/fields/Propietario_de_la_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Propietario_de_la_Oportunidad__c</fullName>
    <formula>Proforma__r.Oportunidad__r.Owner.FirstName + &apos; &apos; + Proforma__r.Oportunidad__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Propietario de la Oportunidad</label>
    <type>Text</type>
</CustomField>