force-app/main/default/objects/PedidoDeCompra__c/fields/Propietario_Operativo__c.field-meta.xml
<CustomField>
    <fullName>Propietario_Operativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario Operativo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PedidosDeCompra</relationshipName>
    <type>Lookup</type>
</CustomField>