force-app/main/default/objects/PedidoDeCompra__c/fields/Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Proveedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proveedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Pedidos_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>