force-app/main/default/objects/PedidoDeCompra__c/fields/Puerto_de_destino__c.field-meta.xml
<CustomField>
    <fullName>Puerto_de_destino__c</fullName>
    <label>Puerto de destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Puertos</valueSetName>
    </valueSet>
</CustomField>