force-app/main/default/objects/PedidoDeCompra__c/fields/RefOpp__c.field-meta.xml
<CustomField>
    <fullName>RefOpp__c</fullName>
    <formula>Proforma__r.Oportunidad__r.Name</formula>
    <label>Oportunidad</label>
    <type>Text</type>
</CustomField>