force-app/main/default/objects/PedidoDeCompra__c/fields/Requisitos_Especiales__c.field-meta.xml
<CustomField>
    <fullName>Requisitos_Especiales__c</fullName>
    <label>Requisitos Especiales</label>
    <type>TextArea</type>
</CustomField>