force-app/main/default/objects/PedidoDeCompra__c/fields/Revisi_n_descripci_n_comercial__c.field-meta.xml
<CustomField>
    <fullName>Revisi_n_descripci_n_comercial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Opportunity owner reviews the commercial descriptions</inlineHelpText>
    <label>Revisión descripción comercial</label>
    <type>Checkbox</type>
</CustomField>