force-app/main/default/objects/PedidoDeCompra__c/fields/Revisi_n_interna_compras__c.field-meta.xml
<CustomField>
    <fullName>Revisi_n_interna_compras__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Order owner reviews the created design for internal approval before sending to the Customer</inlineHelpText>
    <label>Revisión interna compras</label>
    <type>Checkbox</type>
</CustomField>