force-app/main/default/objects/PedidoDeCompra__c/fields/SO__c.field-meta.xml
<CustomField>
    <fullName>SO__c</fullName>
    <inlineHelpText>Shipping order, booking number confirmation</inlineHelpText>
    <label>SO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>