force-app/main/default/objects/PedidoDeCompra__c/fields/Solicitud_booking_enviada__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_booking_enviada__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It is marked when purchase requests the shipping company to book the order</inlineHelpText>
    <label>Solicitud booking naviera</label>
    <type>Checkbox</type>
</CustomField>