force-app/main/default/objects/PedidoDeCompra__c/fields/Solicitud_informaci_n_a_proveedor__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_informaci_n_a_proveedor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Order owner waiting for technical information</inlineHelpText>
    <label>Solicitud info a proveedor</label>
    <type>Checkbox</type>
</CustomField>