force-app/main/default/objects/PedidoDeCompra__c/fields/SolicitudBookingInterna__c.field-meta.xml
<CustomField>
    <fullName>SolicitudBookingInterna__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is marked when sales requests purchasing to book the order with the shipping company</inlineHelpText>
    <label>Solicitud booking interna</label>
    <type>Checkbox</type>
</CustomField>