force-app/main/default/objects/PedidoDeCompra__c/fields/Submit_Documents_Bank__c.field-meta.xml
<CustomField>
    <fullName>Submit_Documents_Bank__c</fullName>
    <description>Date when Pacific Global submitted the shipping documents to the bank.</description>
    <label>Status Documents Bank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Awaiting buyer acceptance</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Fully financed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>