force-app/main/default/objects/PedidoDeCompra__c/fields/Submit_Documents_to_FW__c.field-meta.xml
<CustomField>
    <fullName>Submit_Documents_to_FW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Documents Submitted to Forwarder Date</description>
    <inlineHelpText>Date when Pacific Global confirmed and recorded that the shipping documents were submitted to the forwarder.</inlineHelpText>
    <label>Submit Documents Forwarder</label>
    <type>Checkbox</type>
</CustomField>