force-app/main/default/objects/PedidoDeCompra__c/fields/Tipo_de_Contenedores__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contenedores__c</fullName>
    <formula>Proforma__r.Tipo_de_Contenedores__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Contenedor(es)</label>
    <type>Text</type>
</CustomField>