force-app/main/default/objects/PedidoDeCompra__c/fields/Tipo_de_dise_o_de_packaging__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_dise_o_de_packaging__c</fullName>
    <inlineHelpText>The Commercial Opportunity owner defines the type of design to be created in the Order</inlineHelpText>
    <label>Tipo de diseño de packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DISEÑO NUEVO</fullName>
                <default>true</default>
                <label>DISEÑO NUEVO</label>
            </value>
            <value>
                <fullName>ACTUALIZACION DE INFORMACION</fullName>
            </value>
            <value>
                <fullName>NO REQUIERE CAMBIOS</fullName>
                <label>SIN CAMBIOS - CONFIRMAR CON VENTAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>