force-app/main/default/objects/PedidoDeCompra__c/fields/TipoDeContenedor__c.field-meta.xml
<CustomField>
    <fullName>TipoDeContenedor__c</fullName>
    <formula>TEXT(Proforma__r.TipoDeContenedor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Contenedor</label>
    <type>Text</type>
</CustomField>