force-app/main/default/objects/PedidoDeCompra__c/fields/TipoDeInteresDepositoFabrica__c.field-meta.xml
<CustomField>
    <fullName>TipoDeInteresDepositoFabrica__c</fullName>
    <defaultValue>0.04</defaultValue>
    <label>Tipo de interés (Fabrica)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>