force-app/main/default/objects/PedidoDeCompra__c/fields/TipoDeInteresFinanciacionClient__c.field-meta.xml
<CustomField>
    <fullName>TipoDeInteresFinanciacionClient__c</fullName>
    <defaultValue>0.04</defaultValue>
    <label>Tipo de interés</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>