force-app/main/default/objects/PedidoDeCompra__c/fields/Total_Cajas__c.field-meta.xml
<CustomField>
    <fullName>Total_Cajas__c</fullName>
    <description>total de cajas</description>
    <label>Total Cajas</label>
    <summarizedField>PedidoLineItem__c.NumeroDeCajas__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>