force-app/main/default/objects/PedidoDeCompra__c/fields/Total_Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Total_Cantidad__c</fullName>
    <label>Total de unidades</label>
    <summarizedField>PedidoLineItem__c.Unidades__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>