force-app/main/default/objects/PedidoDeCompra__c/fields/Total_Unidades_Masterbox__c.field-meta.xml
<CustomField>
    <fullName>Total_Unidades_Masterbox__c</fullName>
    <description>Total usado en el documento PDF de packing list</description>
    <label>Total Unidades Masterbox</label>
    <summarizedField>PedidoLineItem__c.UnidadesPorMasterbox__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>