force-app/main/default/objects/PedidoDeCompra__c/fields/TotalNumeroDeCajas__c.field-meta.xml
<CustomField>
    <fullName>TotalNumeroDeCajas__c</fullName>
    <label>Total número de cajas</label>
    <summarizedField>PedidoLineItem__c.NumeroDeCajas__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>