force-app/main/default/objects/PedidoDeCompra__c/fields/TotalNumeroDeCajasEnContenedores__c.field-meta.xml
<CustomField>
    <fullName>TotalNumeroDeCajasEnContenedores__c</fullName>
    <label>Total número de cajas en contenedores</label>
    <summarizedField>PedidoLineItem__c.NumeroDeCajasEnContenedores__c</summarizedField>
    <summaryForeignKey>PedidoLineItem__c.PedidoDeCompra__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>