force-app/main/default/objects/PedidoDeCompra__c/fields/URL_Informe_Audiroria__c.field-meta.xml
<CustomField>
    <fullName>URL_Informe_Audiroria__c</fullName>
    <description>Enlace hacia el informe de auditoria</description>
    <label>Enlace Informe Auditoría</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>