force-app/main/default/objects/PedidoDeCompra__c/fields/Versi_n_inicial_dise_ador__c.field-meta.xml
<CustomField>
    <fullName>Versi_n_inicial_dise_ador__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The designer has completed the first version for internal team review</inlineHelpText>
    <label>Versión inicial diseñador</label>
    <type>Checkbox</type>
</CustomField>