force-app/main/default/objects/PedidoDeCompra__c/fields/VESSEL_VOYAGE__c.field-meta.xml
<CustomField>
    <fullName>VESSEL_VOYAGE__c</fullName>
    <label>VESSEL/VOYAGE</label>
    <length>120</length>
    <type>Text</type>
</CustomField>