force-app/main/default/objects/PedidoDeCompra__c/listViews/CONTROL_PAGO_INSPECCIONES.listView-meta.xml
<ListView>
    <fullName>CONTROL_PAGO_INSPECCIONES</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Proveedor__c</columns>
    <columns>c_Produccion_Finalizada__c</columns>
    <columns>Fecha_de_Auditoria__c</columns>
    <columns>GastosInspeccion__c</columns>
    <columns>Inspeccion_pagada__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Planificacion__c</field>
        <operation>startsWith</operation>
        <value>2025,2026</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PedidoDeCompra__c.Principal</value>
    </filters>
    <filters>
        <field>Inspeccion_pagada__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>GastosInspeccion__c</field>
        <operation>notEqual</operation>
        <value>USD 0</value>
    </filters>
    <label>2026 - INSPECTIONS PAYMENT CONTROL</label>
    <sharedTo>
        <role>Comprador</role>
    </sharedTo>
</ListView>