force-app/main/default/objects/PedidoDeCompra__c/listViews/Copia_de_2024_Todos_los_Pedidos.listView-meta.xml
<ListView>
    <fullName>Copia_de_2024_Todos_los_Pedidos</fullName>
    <columns>NAME</columns>
    <columns>Proforma__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Numero_de_Orden__c</columns>
    <columns>Estado__c</columns>
    <columns>Fecha_de_Compromiso_con_el_Cliente__c</columns>
    <columns>Indicador_Booking__c</columns>
    <columns>Fecha_Minima_Embarque__c</columns>
    <columns>ETD__c</columns>
    <columns>ETA__c</columns>
    <columns>Numero_de_Factura__c</columns>
    <columns>Precio_Total__c</columns>
    <columns>MargenOperacion__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Planificacion__c</field>
        <operation>startsWith</operation>
        <value>2025</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PedidoDeCompra__c.Principal</value>
    </filters>
    <label>Orders 2025</label>
</ListView>