force-app/main/default/objects/PedidoDeCompra__c/listViews/Copia_de_2025_CONTROL_INSPECCIONES.listView-meta.xml
<ListView>
    <fullName>Copia_de_2025_CONTROL_INSPECCIONES</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Proveedor__c</columns>
    <columns>Fecha_de_Compromiso_con_el_Cliente__c</columns>
    <columns>Factory_ETD__c</columns>
    <columns>c_Produccion_Finalizada__c</columns>
    <columns>Estado2__c</columns>
    <columns>c_Requiere_Auditoria__c</columns>
    <columns>Fecha_de_Auditoria__c</columns>
    <columns>AuditoriaAprobada__c</columns>
    <columns>IndicadorAuditoria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Planificacion__c</field>
        <operation>startsWith</operation>
        <value>2026</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PedidoDeCompra__c.Principal</value>
    </filters>
    <filters>
        <field>AuditoriaAprobada__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>2026 - INSPECTIONS CONTROL</label>
    <sharedTo>
        <role>Comprador</role>
    </sharedTo>
</ListView>