force-app/main/default/objects/PedidoDeCompra__c/listViews/Copia_de_2026_CONTROL_EMBARQUES.listView-meta.xml
<ListView>
    <fullName>Copia_de_2026_CONTROL_EMBARQUES</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <columns>Proveedor__c</columns>
    <columns>Estado2__c</columns>
    <columns>Fecha_de_Compromiso_con_el_Cliente__c</columns>
    <columns>Fecha_Minima_Embarque__c</columns>
    <columns>Fecha_Maxima_Embarque__c</columns>
    <columns>Fecha_de_Carga_de_Contenedor__c</columns>
    <columns>SO__c</columns>
    <columns>ETD__c</columns>
    <columns>ETA__c</columns>
    <columns>Certificado_de_Origen__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Planificacion__c</field>
        <operation>startsWith</operation>
        <value>2026</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PedidoDeCompra__c.Principal</value>
    </filters>
    <filters>
        <field>AuditoriaAprobada__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Estado2__c</field>
        <operation>notContain</operation>
        <value>EMBARCADO</value>
    </filters>
    <label>2026 - SHIPMENTS CONTROL</label>
    <sharedTo>
        <role>Comprador</role>
    </sharedTo>
</ListView>