force-app/main/default/objects/PedidoDeCompra__c/listViews/Pedidos_EMBARCADOS_pendiente_BALANCE.listView-meta.xml
<ListView>
    <fullName>Pedidos_EMBARCADOS_pendiente_BALANCE</fullName>
    <columns>NAME</columns>
    <columns>IndicadorDeCobro__c</columns>
    <columns>FacturaProveedorPagada__c</columns>
    <columns>IndicadorDePago__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Proveedor__c</columns>
    <columns>Numero_de_Factura__c</columns>
    <columns>CostoOrigen__c</columns>
    <columns>PorcentajeDepositoAFabrica__c</columns>
    <columns>ImporteAdelantado__c</columns>
    <columns>Monto_Balance_estimado__c</columns>
    <columns>ETD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Planificacion__c</field>
        <operation>startsWith</operation>
        <value>2025,2026</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PedidoDeCompra__c.Principal</value>
    </filters>
    <filters>
        <field>FacturaProveedorPagada__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <filters>
        <field>Estado2__c</field>
        <operation>equals</operation>
        <value>EMBARCADO</value>
    </filters>
    <label>SHIPPED Orders Pending BALANCE</label>
    <sharedTo>
        <role>Gerencia_General</role>
    </sharedTo>
</ListView>